# proxypool

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml
assets/: index.html
src/: admin.rs  config.rs  health.rs  main.rs  parser.rs  selector.rs  store.rs
src/proxy/: http.rs  listener.rs  mod.rs  socks5.rs  upstream.rs
