[package]
name = "proxy-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
arc-swap = "1"
parking_lot = "0.12"
regex = "1"
base64 = "0.22"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-socks = "0.5"
bytes = "1"
once_cell = "1"
async-trait = "0.1"
http = "1"

[profile.release]
lto = "thin"
opt-level = 3
strip = true
codegen-units = 1
